--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -42,7 +42,7 @@ section
 		margin: 18px auto
 		h1
 			color: #E50B7C
-			font-size: 31px
+			font-size: 28px
 			font-weight: 700
 			letter-spacing: 0px
 		form
@@ -88,16 +88,15 @@ section
 			.text_header
 				width: $w
 				p
-					font-size: 17px
+					font-size: 16px
 					color: #b7b7b7
-					padding: 30px 65px 0
+					padding: 0 65px 0
 					margin: 0
 					letter-spacing: 0
-					line-height: 10px
 			.content
 				width: $w
 				margin: 0 auto
-				padding: 5px 90px 3px
+				padding: 5px 75px 3px
 				overflow: hidden
 				.b_left, .b_right
 					ul
@@ -106,9 +105,8 @@ section
 							padding: 4px 0
 							margin: 0 auto
 							list-style-image: url('../img/the_volgas.png')
-							list-style-width: 50px
 							a
-								font-size: 25px
+								font-size: 23px
 								color: #e50b7c
 							a:hover
 								text-decoration: underline
